# RioClipboardManager

./: .gitignore  AppResources.qrc  CMakeLists.txt  LICENSE.txt  README.md  app.manifest
Resources/: dark_pro.qss
database/: databasemanager.cpp  databasemanager.h
src/: Structs.h  appsettings.cpp  appsettings.h  clipboardmanager.cpp  clipboardmanager.h  clipboardmodel.cpp  clipboardmodel.h  hotkeyedit.cpp  hotkeyedit.h  listitemdelegate.cpp  listitemdelegate.h  main.cpp  quickmenu.cpp  quickmenu.h  settingswindow.cpp  settingswindow.h  traycontroller.cpp  traycontroller.h
ui/: quickmenu.ui  settingswindow.ui
